package b;
public enum User {
	OWNER, COMPANY 
}
